Set bucket_cap_mb for PyTorch DDP

--- a/community-content/pytorch_text_classification_distributed_training_using_gcloud/trainer/Dockerfile
+++ b/community-content/pytorch_text_classification_distributed_training_using_gcloud/trainer/Dockerfile
@@ -5,13 +5,12 @@ FROM gcr.io/deeplearning-platform-release/pytorch-gpu.1-9
 WORKDIR /app
 
 # Install required packages
-RUN echo "deb https://packages.cloud.google.com/apt google-fast-socket-unstable main" | tee /etc/apt/sources.list.d/google-fast-socket.list && \
-  curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
+RUN curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - && \
   apt-get update && \
   apt-get remove -y google-fast-socket && \
   DEBIAN_FRONTEND=noninteractive apt-get install -y google-reduction-server
 
-RUN pip install google-cloud-storage transformers datasets tqdm cloudml-hypertune
+RUN pip install google-cloud-storage datasets tqdm cloudml-hypertune transformers
 
 COPY ./launcher.sh /app/launcher.sh
 COPY ./run_glue.py /app/run_glue.py
